--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-mocha": "^4.3.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11",
     "path": "^0.12.7",
     "run-sequence": "^1.2.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
