--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "$(npm bin)/mocha test/** -r test/spec_setup.js",
     "test:watch": "$(npm bin)/mocha -w test/** -r test/spec_setup.js",
     "start": "gulp",
+    "dev": "concurrently \"npm run start\" \"npm run docs.start\"",
     "docs.start": "fractal start --sync",
-    "build": "gulp dist",
+    "build": "concurrently \"npm run css.build\" \"npm run docs.build\"",
     "css.build": "gulp dist",
     "docs.build": "fractal build"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@frctl/fractal": "^1.1.7",
     "browser-sync": "^2.18.8",
+    "concurrently": "^4.0.1",
     "cssmin": "^0.4.3",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
