--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "daisuke.takayama",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@frctl/fractal": "^1.1.7",
     "browser-sync": "^2.18.8",
     "concurrently": "^4.0.1",
